--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "3.0.4",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-countdown-circle-timer": "^2.3.11",
+    "react-native-date-picker": "^3.2.9",
+    "react-native-elements": "^3.1.0",
+    "react-native-numeric-input": "^1.8.3",
+    "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
