--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "3.0.4",
+    "@types/react": "^17.0.0",
+    "@types/react-native": "^0.63.46",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "moment": "^2.29.1",
     "react": "16.13.1",
+    "react-countdown-circle-timer": "^2.4.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-countdown-circle-timer": "^2.3.11",
     "react-native-date-picker": "^3.2.9",
     "react-native-elements": "^3.1.0",
     "react-native-numeric-input": "^1.8.3",
+    "react-native-svg": "12.1.0",
+    "react-native-typescript-transformer": "^1.2.13",
+    "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^8.0.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "touch": "^3.1.0",
+    "typescript": "^4.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
